# Alsa_example

./: CMakeLists.txt  README.md
include/: dev_alsa.h  dev_wav.h
lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
lib/pkgconfig/: alsa-topology.pc  alsa.pc
src/: dev_alsa.c  dev_wav.c  main  main.c
